--- a/DatingApp-SPA/package.json
+++ b/DatingApp-SPA/package.json
@@ -11,42 +11,43 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.1.6",
-    "@angular/common": "~9.1.6",
-    "@angular/compiler": "~9.1.6",
-    "@angular/core": "~9.1.6",
-    "@angular/forms": "~9.1.6",
-    "@angular/platform-browser": "~9.1.6",
-    "@angular/platform-browser-dynamic": "~9.1.6",
-    "@angular/router": "~9.1.6",
-    "@auth0/angular-jwt": "^4.1.2",
+    "@angular/animations": "~10.0.10",
+    "@angular/common": "~10.0.10",
+    "@angular/compiler": "~10.0.10",
+    "@angular/core": "~10.0.10",
+    "@angular/forms": "~10.0.10",
+    "@angular/platform-browser": "~10.0.10",
+    "@angular/platform-browser-dynamic": "~10.0.10",
+    "@angular/router": "~10.0.10",
+    "@auth0/angular-jwt": "^5.0.1",
+    "@kolkov/ngx-gallery": "^1.2.3",
     "alertifyjs": "^1.13.1",
-    "bootstrap": "^4.5.0",
-    "bootswatch": "^4.5.0",
+    "bootstrap": "^4.5.2",
+    "bootswatch": "^4.5.2",
     "font-awesome": "^4.7.0",
-    "ngx-bootstrap": "^5.6.1",
-    "rxjs": "~6.5.4",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "ngx-bootstrap": "^5.6.2",
+    "rxjs": "~6.6.2",
+    "tslib": "^2.0.1",
+    "typescript": "^4.0.2",
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.7",
-    "@angular/cli": "~9.1.5",
-    "@angular/compiler-cli": "~9.1.6",
-    "@types/jasmine": "~3.5.0",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^5.1.2",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~5.0.0",
+    "@angular-devkit/build-angular": "^0.1000.8",
+    "@angular/cli": "~10.0.6",
+    "@angular/compiler-cli": "~10.0.10",
+    "@types/jasmine": "~3.5.12",
+    "@types/jasminewd2": "~2.0.8",
+    "@types/node": "^14.6.0",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.2",
+    "karma": "~5.1.1",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~2.1.0",
-    "karma-jasmine": "~3.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
-    "protractor": "~5.4.3",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~3.8.3"
+    "karma-coverage-istanbul-reporter": "~3.0.3",
+    "karma-jasmine": "~4.0.1",
+    "karma-jasmine-html-reporter": "^1.5.4",
+    "protractor": "~7.0.0",
+    "ts-node": "~8.10.2",
+    "tslint": "~6.1.3"
   }
 }
